--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,10 +1,19 @@
-﻿<h1>Add a Job</h1>
+﻿@using TechJobsPersistent.ViewModels;@model AddJobViewModel;
+
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
         <label>Name</label>
         <input class="form-control" />
         <span></span>
+    </div>
+    <div class="form-group">
+        <label>Employers</label>
+        @Html.DropDownListFor(model => model.EmployerId, Model.Employers, new { @class = "form-control" })
+
+
+
     </div>
 
     <input type="submit" value="Add Job" />
